[project]
name = "ollama-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asarpy==1.0.1",
    "caldav>=2.0.1",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "dateparser>=1.2.2",
    "diffusers[torch]>=0.34.0",
    "fastapi==0.115.12",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "icalendar>=6.3.1",
    "ics>=0.7.2",
    "idna==3.10",
    "mcp>=1.9.4",
    "ollama==0.4.8",
    "parsedatetime>=2.6",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pytelegrambotapi==4.27.0",
    "python-dotenv==1.1.0",
    "python-telegram-bot==22.1",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "transformers>=4.52.4",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.1",
    "tzlocal>=5.3.1",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "vobject>=0.9.9",
]
