[project]
name = "ollama-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytelegrambotapi==4.27.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "caldav>=2.0.1",
    "icalendar>=6.3.1",
    "tzlocal>=5.3.1",
    "ollama==0.4.8",  # API-only usage
    "pydantic==2.11.5",
    "fastapi==0.115.12",  # Only if you need webhooks
    "uvicorn==0.34.2" 
]
