[project]
name = "ollama-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caldav==2.0.1",
    "icalendar==6.3.1",
    "ics==0.7.2",
    "openai>=1.97.1",
    "psutil==7.0.0",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "pytelegrambotapi==4.27.0",
    "python-dotenv==1.1.0",
    "python-telegram-bot-calendar>=1.0.5",
    "pytz==2025.2",
    "recurring-ical-events==3.8.0",
    "requests==2.32.3",
    "tzlocal==5.3.1",
    "vobject==0.9.9",
]
